# crdt-poc

./: .gitignore  poc.py  pyproject.toml
tests/: test_basic_op.py  test_classes.py
